// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JsonFileUpload /> render 1`] = `
<JsonFileUpload
  id="test"
  onChange={[MockFunction]}
>
  <FormGroup
    fieldId="test"
    helperText="Upload a JSON file"
    label="resourceFile"
  >
    <div
      className="pf-c-form__group"
    >
      <div
        className="pf-c-form__group-label"
      >
        <label
          className="pf-c-form__label"
          htmlFor="test"
        >
          <span
            className="pf-c-form__label-text"
          >
            resourceFile
          </span>
        </label>
         
      </div>
      <div
        className="pf-c-form__group-control"
      >
        <FileUpload
          allowEditingUploadedText={true}
          dropzoneProps={
            Object {
              "accept": ".json",
            }
          }
          filename=""
          id="test"
          isLoading={false}
          onChange={[Function]}
          onReadFinished={[Function]}
          onReadStarted={[Function]}
          type="text"
          value=""
        >
          <t
            accept=".json"
            disabled={false}
            getDataTransferItems={[Function]}
            maxSize={Infinity}
            minSize={0}
            multiple={false}
            onDropAccepted={[Function]}
            onDropRejected={[Function]}
            preventDropOnDocument={true}
          >
            <FileUploadField
              allowEditingUploadedText={true}
              containerRef={[Function]}
              filename=""
              id="test"
              isLoading={false}
              onBlur={[Function]}
              onBrowseButtonClick={[Function]}
              onChange={[Function]}
              onClearButtonClick={[Function]}
              onClick={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              tabIndex={null}
              type="text"
              value=""
            >
              <div
                className="pf-c-file-upload"
                onBlur={[Function]}
                onClick={[Function]}
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                tabIndex={null}
              >
                <div
                  className="pf-c-file-upload__file-select"
                >
                  <InputGroup>
                    <div
                      className="pf-c-input-group"
                    >
                      <TextInput
                        aria-describedby="test-browse-button"
                        aria-label="Drag a file here or browse to upload"
                        id="test-filename"
                        isDisabled={false}
                        isReadOnly={true}
                        key=".0"
                        name="test-filename"
                        placeholder="Drag a file here or browse to upload"
                        value=""
                      >
                        <TextInputBase
                          aria-describedby="test-browse-button"
                          aria-label="Drag a file here or browse to upload"
                          className=""
                          id="test-filename"
                          innerRef={null}
                          isDisabled={false}
                          isLeftTruncated={false}
                          isReadOnly={true}
                          isRequired={false}
                          name="test-filename"
                          onChange={[Function]}
                          placeholder="Drag a file here or browse to upload"
                          type="text"
                          validated="default"
                          value=""
                        >
                          <input
                            aria-describedby="test-browse-button"
                            aria-invalid={false}
                            aria-label="Drag a file here or browse to upload"
                            className="pf-c-form-control"
                            disabled={false}
                            id="test-filename"
                            name="test-filename"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            placeholder="Drag a file here or browse to upload"
                            readOnly={true}
                            required={false}
                            type="text"
                            value=""
                          />
                        </TextInputBase>
                      </TextInput>
                      <Button
                        id="test-browse-button"
                        isDisabled={false}
                        key=".1"
                        onClick={[Function]}
                        variant="control"
                      >
                        <button
                          aria-disabled={false}
                          aria-label={null}
                          className="pf-c-button pf-m-control"
                          data-ouia-component-id="OUIA-Generated-Button-control-1"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe={true}
                          disabled={false}
                          id="test-browse-button"
                          onClick={[Function]}
                          role={null}
                          type="button"
                        >
                          Browse...
                        </button>
                      </Button>
                      <Button
                        isDisabled={true}
                        key=".2"
                        onClick={[Function]}
                        variant="control"
                      >
                        <button
                          aria-disabled={true}
                          aria-label={null}
                          className="pf-c-button pf-m-control pf-m-disabled"
                          data-ouia-component-id="OUIA-Generated-Button-control-2"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe={true}
                          disabled={true}
                          onClick={[Function]}
                          role={null}
                          tabIndex={null}
                          type="button"
                        >
                          Clear
                        </button>
                      </Button>
                    </div>
                  </InputGroup>
                </div>
                <div
                  className="pf-c-file-upload__file-details"
                >
                  <TextArea
                    aria-label="File upload"
                    disabled={false}
                    id="test"
                    isRequired={false}
                    name="test"
                    onChange={[Function]}
                    readOnly={false}
                    resizeOrientation="vertical"
                    validated="default"
                    value=""
                  >
                    <TextArea
                      aria-label="File upload"
                      className=""
                      disabled={false}
                      id="test"
                      innerRef={null}
                      isDisabled={false}
                      isRequired={false}
                      name="test"
                      onChange={[Function]}
                      readOnly={false}
                      resizeOrientation="vertical"
                      validated="default"
                      value=""
                    >
                      <textarea
                        aria-invalid={false}
                        aria-label="File upload"
                        className="pf-c-form-control pf-m-resize-vertical"
                        disabled={false}
                        id="test"
                        name="test"
                        onChange={[Function]}
                        readOnly={false}
                        required={false}
                        value=""
                      />
                    </TextArea>
                  </TextArea>
                </div>
                <input
                  accept=".json"
                  autoComplete="off"
                  multiple={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                  tabIndex={-1}
                  type="file"
                />
              </div>
            </FileUploadField>
          </t>
        </FileUpload>
        <div
          aria-live="polite"
          className="pf-c-form__helper-text"
          id="test-helper"
        >
          Upload a JSON file
        </div>
      </div>
    </div>
  </FormGroup>
</JsonFileUpload>
`;

exports[`<JsonFileUpload /> upload file 1`] = `
<JsonFileUpload
  id="upload"
  onChange={[MockFunction]}
>
  <FormGroup
    fieldId="upload"
    helperText="Upload a JSON file"
    label="resourceFile"
  >
    <div
      className="pf-c-form__group"
    >
      <div
        className="pf-c-form__group-label"
      >
        <label
          className="pf-c-form__label"
          htmlFor="upload"
        >
          <span
            className="pf-c-form__label-text"
          >
            resourceFile
          </span>
        </label>
         
      </div>
      <div
        className="pf-c-form__group-control"
      >
        <FileUpload
          allowEditingUploadedText={true}
          dropzoneProps={
            Object {
              "accept": ".json",
            }
          }
          filename=""
          id="upload"
          isLoading={false}
          onChange={[Function]}
          onReadFinished={[Function]}
          onReadStarted={[Function]}
          type="text"
          value=""
        >
          <t
            accept=".json"
            disabled={false}
            getDataTransferItems={[Function]}
            maxSize={Infinity}
            minSize={0}
            multiple={false}
            onDropAccepted={[Function]}
            onDropRejected={[Function]}
            preventDropOnDocument={true}
          >
            <FileUploadField
              allowEditingUploadedText={true}
              containerRef={[Function]}
              filename=""
              id="upload"
              isDragActive={false}
              isLoading={false}
              onBlur={[Function]}
              onBrowseButtonClick={[Function]}
              onChange={[Function]}
              onClearButtonClick={[Function]}
              onClick={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              tabIndex={null}
              type="text"
              value=""
            >
              <div
                className="pf-c-file-upload"
                onBlur={[Function]}
                onClick={[Function]}
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDragStart={[Function]}
                onDrop={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                tabIndex={null}
              >
                <div
                  className="pf-c-file-upload__file-select"
                >
                  <InputGroup>
                    <div
                      className="pf-c-input-group"
                    >
                      <TextInput
                        aria-describedby="upload-browse-button"
                        aria-label="Drag a file here or browse to upload"
                        id="upload-filename"
                        isDisabled={false}
                        isReadOnly={true}
                        key=".0"
                        name="upload-filename"
                        placeholder="Drag a file here or browse to upload"
                        value=""
                      >
                        <TextInputBase
                          aria-describedby="upload-browse-button"
                          aria-label="Drag a file here or browse to upload"
                          className=""
                          id="upload-filename"
                          innerRef={null}
                          isDisabled={false}
                          isLeftTruncated={false}
                          isReadOnly={true}
                          isRequired={false}
                          name="upload-filename"
                          onChange={[Function]}
                          placeholder="Drag a file here or browse to upload"
                          type="text"
                          validated="default"
                          value=""
                        >
                          <input
                            aria-describedby="upload-browse-button"
                            aria-invalid={false}
                            aria-label="Drag a file here or browse to upload"
                            className="pf-c-form-control"
                            disabled={false}
                            id="upload-filename"
                            name="upload-filename"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            placeholder="Drag a file here or browse to upload"
                            readOnly={true}
                            required={false}
                            type="text"
                            value=""
                          />
                        </TextInputBase>
                      </TextInput>
                      <Button
                        id="upload-browse-button"
                        isDisabled={false}
                        key=".1"
                        onClick={[Function]}
                        variant="control"
                      >
                        <button
                          aria-disabled={false}
                          aria-label={null}
                          className="pf-c-button pf-m-control"
                          data-ouia-component-id="OUIA-Generated-Button-control-3"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe={true}
                          disabled={false}
                          id="upload-browse-button"
                          onClick={[Function]}
                          role={null}
                          type="button"
                        >
                          Browse...
                        </button>
                      </Button>
                      <Button
                        isDisabled={true}
                        key=".2"
                        onClick={[Function]}
                        variant="control"
                      >
                        <button
                          aria-disabled={true}
                          aria-label={null}
                          className="pf-c-button pf-m-control pf-m-disabled"
                          data-ouia-component-id="OUIA-Generated-Button-control-4"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe={true}
                          disabled={true}
                          onClick={[Function]}
                          role={null}
                          tabIndex={null}
                          type="button"
                        >
                          Clear
                        </button>
                      </Button>
                    </div>
                  </InputGroup>
                </div>
                <div
                  className="pf-c-file-upload__file-details"
                >
                  <TextArea
                    aria-label="File upload"
                    disabled={false}
                    id="upload"
                    isRequired={false}
                    name="upload"
                    onChange={[Function]}
                    readOnly={false}
                    resizeOrientation="vertical"
                    validated="default"
                    value=""
                  >
                    <TextArea
                      aria-label="File upload"
                      className=""
                      disabled={false}
                      id="upload"
                      innerRef={null}
                      isDisabled={false}
                      isRequired={false}
                      name="upload"
                      onChange={[Function]}
                      readOnly={false}
                      resizeOrientation="vertical"
                      validated="default"
                      value=""
                    >
                      <textarea
                        aria-invalid={false}
                        aria-label="File upload"
                        className="pf-c-form-control pf-m-resize-vertical"
                        disabled={false}
                        id="upload"
                        name="upload"
                        onChange={[Function]}
                        readOnly={false}
                        required={false}
                        value=""
                      />
                    </TextArea>
                  </TextArea>
                </div>
                <input
                  accept=".json"
                  autoComplete="off"
                  multiple={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                  tabIndex={-1}
                  type="file"
                />
              </div>
            </FileUploadField>
          </t>
        </FileUpload>
        <div
          aria-live="polite"
          className="pf-c-form__helper-text"
          id="upload-helper"
        >
          Upload a JSON file
        </div>
      </div>
    </div>
  </FormGroup>
</JsonFileUpload>
`;
